--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,8 @@
 <body>
     <div class="container">
         <h1>Shopify AI Chat Agent</h1>
-        <p>This app is designed to be used within the Shopify admin.</p>
         <p>Please install this app on your Shopify store to use it.</p>
-        <a href="/app" class="btn">Go to App</a>
+        <a href="/app" class="btn">Open App</a>
     </div>
 </body>
 </html> 
